force-app/main/default/objects/Lead/fields/AccountType1__c.field-meta.xml
<CustomField>
    <fullName>AccountType1__c</fullName>
    <formula>TEXT(AccountType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>