force-app/main/default/objects/Lead/fields/BusinessCardPhoto__c.field-meta.xml
<CustomField>
    <fullName>BusinessCardPhoto__c</fullName>
    <inlineHelpText>Enter the photo of the Business card for this Lead, if available. Upload from your computer.</inlineHelpText>
    <label>Business Card Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>