force-app/main/default/objects/Lead/fields/CEOName__c.field-meta.xml
<CustomField>
    <fullName>CEOName__c</fullName>
    <inlineHelpText>Full Name of the contact iF he is the CEO of a Company. oR Full Name of the CEO of this Company where the Lead works.</inlineHelpText>
    <label>CEO Full Name [Text]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>