force-app/main/default/objects/Lead/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Enter any comments that are helpful and explain this field further.</inlineHelpText>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>