force-app/main/default/objects/Lead/fields/Company1__c.field-meta.xml
<CustomField>
    <fullName>Company1__c</fullName>
    <inlineHelpText>Name of the Company where Lead has worked</inlineHelpText>
    <label>Company #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>