force-app/main/default/objects/Lead/fields/Company2__c.field-meta.xml
<CustomField>
    <fullName>Company2__c</fullName>
    <inlineHelpText>Name of the Company where Lead has worked</inlineHelpText>
    <label>Company #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>