force-app/main/default/objects/Lead/fields/Company3__c.field-meta.xml
<CustomField>
    <fullName>Company3__c</fullName>
    <inlineHelpText>Name of the Company where Lead has worked</inlineHelpText>
    <label>Company #3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>