force-app/main/default/objects/Lead/fields/CompanyAcc__c.field-meta.xml
<CustomField>
    <fullName>CompanyAcc__c</fullName>
    <formula>Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>