force-app/main/default/objects/Lead/fields/CompanyDescription__c.field-meta.xml
<CustomField>
    <fullName>CompanyDescription__c</fullName>
    <inlineHelpText>Describe about the company where Lead has worked or is currently working</inlineHelpText>
    <label>Company Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>