force-app/main/default/objects/Lead/fields/CompanyDescriptionUnique__c.field-meta.xml
<CustomField>
    <fullName>CompanyDescriptionUnique__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Company description (unique value prop)</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>