force-app/main/default/objects/Lead/fields/CompanySubSectorWeb3Industry__c.field-meta.xml
<CustomField>
    <fullName>CompanySubSectorWeb3Industry__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Company Sub-Sector/Web3 Industry</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>