force-app/main/default/objects/Lead/fields/CompanyTheyFounded__c.field-meta.xml
<CustomField>
    <fullName>CompanyTheyFounded__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Company They Founded (If applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>