force-app/main/default/objects/Lead/fields/CompanyWebsite__c.field-meta.xml
<CustomField>
    <fullName>CompanyWebsite__c</fullName>
    <inlineHelpText>Website of the Company if available</inlineHelpText>
    <label>Company Website</label>
    <type>Url</type>
</CustomField>