force-app/main/default/objects/Lead/fields/ConventionName__c.field-meta.xml
<CustomField>
    <fullName>ConventionName__c</fullName>
    <inlineHelpText>Name of the Convention where this Lead was found</inlineHelpText>
    <label>Convention Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>