force-app/main/default/objects/Lead/fields/ConventionYear__c.field-meta.xml
<CustomField>
    <fullName>ConventionYear__c</fullName>
    <inlineHelpText>Year of the Convention when this Lead was found</inlineHelpText>
    <label>Convention Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>