force-app/main/default/objects/Lead/fields/CountryFrom__c.field-meta.xml
<CustomField>
    <fullName>CountryFrom__c</fullName>
    <inlineHelpText>Which country does the Lead belong to</inlineHelpText>
    <label>Country From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>