force-app/main/default/objects/Lead/fields/CreatorEmail__c.field-meta.xml
<CustomField>
    <fullName>CreatorEmail__c</fullName>
    <description>Groopit Creator Email address</description>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Creator Email</label>
    <type>Email</type>
</CustomField>