force-app/main/default/objects/Lead/fields/CreatorID__c.field-meta.xml
<CustomField>
    <fullName>CreatorID__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Creator ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>