force-app/main/default/objects/Lead/fields/CurrentEmployer__c.field-meta.xml
<CustomField>
    <fullName>CurrentEmployer__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Current Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>