force-app/main/default/objects/Lead/fields/DataBlob__c.field-meta.xml
<CustomField>
    <fullName>DataBlob__c</fullName>
    <label>Data Blob</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>