force-app/main/default/objects/Lead/fields/DescribeResearch__c.field-meta.xml
<CustomField>
    <fullName>DescribeResearch__c</fullName>
    <inlineHelpText>If Lead Source &apos;Research&apos; is selected, then fill this box. Describe what type of Research was done to find this Lead</inlineHelpText>
    <label>Describe Research</label>
    <length>255</length>
    <type>Text</type>
</CustomField>