force-app/main/default/objects/Lead/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Please describe the detail about In Person Meeting</description>
    <inlineHelpText>If the Lead source - Research is selected, describe the type of research that was done.</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>