force-app/main/default/objects/Lead/fields/Domicile__c.field-meta.xml
<CustomField>
    <fullName>Domicile__c</fullName>
    <inlineHelpText>Domicile - Headquarters of the Company. Mention the name of the country.</inlineHelpText>
    <label>Domicile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>