force-app/main/default/objects/Lead/fields/FieldsOfKnowledge__c.field-meta.xml
<CustomField>
    <fullName>FieldsOfKnowledge__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Fields Of Knowledge</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>