force-app/main/default/objects/Lead/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <inlineHelpText>First Name of the Lead</inlineHelpText>
    <label>FirstName</label>
    <type>TextArea</type>
</CustomField>