force-app/main/default/objects/Lead/fields/HomeAddress1__c.field-meta.xml
<CustomField>
    <fullName>HomeAddress1__c</fullName>
    <inlineHelpText>Mailing Address of the Lead</inlineHelpText>
    <label>Home Address 1</label>
    <type>TextArea</type>
</CustomField>