force-app/main/default/objects/Lead/fields/Industrytheyinvestin__c.field-meta.xml
<CustomField>
    <fullName>Industrytheyinvestin__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Industry they invest in</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>