force-app/main/default/objects/Lead/fields/Investment_TypeAcc__c.field-meta.xml
<CustomField>
    <fullName>Investment_TypeAcc__c</fullName>
    <formula>IF( INCLUDES( InvestmentType__c  , &quot;PublicMarket&quot;), &quot;PublicMarket; &quot;,&quot;&quot;) 
&amp; 
IF( INCLUDES(InvestmentType__c  , &quot;VentureCapital&quot;), &quot;VentureCapital; &quot;, &quot;&quot;) 
&amp; 
IF( INCLUDES(InvestmentType__c  , &quot;PrivateEquity&quot;), &quot;PrivateEquity; &quot;, &quot;&quot;) 
&amp; 
IF( INCLUDES(InvestmentType__c   , &quot;CryptoCurrency&quot;), &quot;CryptoCurrency; &quot;, &quot;&quot;) 
&amp; 
IF( INCLUDES(InvestmentType__c   , &quot;RetailInvestor&quot;), &quot;RetailInvestor; &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Type</label>
    <type>Text</type>
</CustomField>