force-app/main/default/objects/Lead/fields/Investmentstheyhold__c.field-meta.xml
<CustomField>
    <fullName>Investmentstheyhold__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Investments they hold</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>