force-app/main/default/objects/Lead/fields/InvestmentType__c.field-meta.xml
<CustomField>
    <fullName>InvestmentType__c</fullName>
    <inlineHelpText>Select Investment Type from the Picklist</inlineHelpText>
    <label>Investment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Market</fullName>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Crypto Currency</fullName>
            </value>
            <value>
                <fullName>Retail Investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>