force-app/main/default/objects/Lead/fields/KnownCompaniesinvestedin__c.field-meta.xml
<CustomField>
    <fullName>KnownCompaniesinvestedin__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Known Companies they&apos;ve invested in</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>