force-app/main/default/objects/Lead/fields/lastEditor__c.field-meta.xml
<CustomField>
    <fullName>lastEditor__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>last Editor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>