force-app/main/default/objects/Lead/fields/lastEditTime__c.field-meta.xml
<CustomField>
    <fullName>lastEditTime__c</fullName>
    <description>Last Edit Time when record was recently edited</description>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>last Edit Time</label>
    <type>DateTime</type>
</CustomField>