force-app/main/default/objects/Lead/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <inlineHelpText>Last Name of the Lead</inlineHelpText>
    <label>LastName</label>
    <type>TextArea</type>
</CustomField>