force-app/main/default/objects/Lead/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <inlineHelpText>Steel Perlot Employees not part of IR Intel or Talent Teams
Employee of SP owned company or subsidiary which SP has made an investment into
LinkedIn Social Medium - Directly from LinkedIn.com
SP Social Media - Instagram Twitter FaceBook TikTok YouTube Reddit Medium (not LinkedIn or Discord)
Michelle Ritter/ Steel Perlot Public Relations Team
Discord Social Media application
Steel Perlot [Investor Relations]
LinkedIn Recruiter - person found through LinkedIn Recruiter Enterprise tool</inlineHelpText>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SPMForm</fullName>
                <label>SPM Form</label>
            </value>
            <value>
                <fullName>SPEmployee</fullName>
                <label>SP Employee</label>
            </value>
            <value>
                <fullName>SteelPerlotExecutive</fullName>
                <label>Steel Perlot Executive</label>
            </value>
            <value>
                <fullName>SPIntelTeam</fullName>
                <label>SP Intel Team</label>
            </value>
            <value>
                <fullName>SPTalentTeam</fullName>
            </value>
            <value>
                <fullName>SPSubsidiaryEmployee</fullName>
                <label>SP Subsidiary Employee</label>
            </value>
            <value>
                <fullName>LinkedIntheSocialMedium</fullName>
                <label>LinkedIn the Social Medium</label>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
                <label>Zoom Info</label>
            </value>
            <value>
                <fullName>Convention</fullName>
            </value>
            <value>
                <fullName>SteelPerlotSocialMedia</fullName>
                <label>Steel Perlot Social Media</label>
            </value>
            <value>
                <fullName>MRPR</fullName>
            </value>
            <value>
                <fullName>Discord</fullName>
            </value>
            <value>
                <fullName>SteelPerlotInvestor</fullName>
                <label>Steel Perlot Investor</label>
            </value>
            <value>
                <fullName>SPIRTeam</fullName>
                <label>SPIR Team</label>
            </value>
            <value>
                <fullName>NewsPublication</fullName>
                <label>News Publication</label>
            </value>
            <value>
                <fullName>LinkedInRecruiter</fullName>
                <label>LinkedIn Recruiter</label>
            </value>
            <value>
                <fullName>SteelPerlot.comWebsite</fullName>
                <label>SteelPerlot.com Website</label>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>InPersonMeeting</fullName>
                <label>In Person Meeting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>