force-app/main/default/objects/Lead/fields/Lead_SourceAccContact__c.field-meta.xml
<CustomField>
    <fullName>Lead_SourceAccContact__c</fullName>
    <formula>TEXT( Lead_Source__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>