force-app/main/default/objects/Lead/fields/LeadSourceURL__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceURL__c</fullName>
    <inlineHelpText>Enter the URL when News Publication, LinkedIn Recruiter, LinkedIn the Social Medium, Zoom Info, Convention Lead sources are selected.</inlineHelpText>
    <label>Lead Source URL</label>
    <type>Url</type>
</CustomField>