force-app/main/default/objects/Lead/fields/LinkedInEmailUsed__c.field-meta.xml
<CustomField>
    <fullName>LinkedInEmailUsed__c</fullName>
    <inlineHelpText>Put the email address that was used for this LinkedIn</inlineHelpText>
    <label>LinkedIn Email Used</label>
    <type>Email</type>
</CustomField>