force-app/main/default/objects/Lead/fields/LinkedInLink__c.field-meta.xml
<CustomField>
    <fullName>LinkedInLink__c</fullName>
    <inlineHelpText>URL of the LinkedIn Profile of the Lead</inlineHelpText>
    <label>LinkedIn Link</label>
    <type>Url</type>
</CustomField>