force-app/main/default/objects/Lead/fields/LinkedInLinktoCompany__c.field-meta.xml
<CustomField>
    <fullName>LinkedInLinktoCompany__c</fullName>
    <inlineHelpText>This is the URL of the LinkedIn profile of the company owned by this Lead, or the Company where they work.</inlineHelpText>
    <label>LinkedIn Link to Company</label>
    <type>Url</type>
</CustomField>