force-app/main/default/objects/Lead/fields/LinkedInLinktoIndividual__c.field-meta.xml
<CustomField>
    <fullName>LinkedInLinktoIndividual__c</fullName>
    <inlineHelpText>This is the URL of the personal LinkedIn profile of the  Lead.</inlineHelpText>
    <label>LinkedIn Link to Individual</label>
    <type>Url</type>
</CustomField>