force-app/main/default/objects/Lead/fields/LinkedInProfileLink__c.field-meta.xml
<CustomField>
    <fullName>LinkedInProfileLink__c</fullName>
    <description>LinkedIn profile URL</description>
    <inlineHelpText>URL of the LinkedIn Profile of the Lead</inlineHelpText>
    <label>LinkedIn Profile Link</label>
    <type>Url</type>
</CustomField>