force-app/main/default/objects/Lead/fields/LinktoBio__c.field-meta.xml
<CustomField>
    <fullName>LinktoBio__c</fullName>
    <inlineHelpText>Provide URL link to the Bio of the Lead if exists.</inlineHelpText>
    <label>Link to Bio</label>
    <type>Url</type>
</CustomField>