force-app/main/default/objects/Lead/fields/Managed_People_Before_Contact__c.field-meta.xml
<CustomField>
    <fullName>Managed_People_Before_Contact__c</fullName>
    <formula>TEXT( ManagedPeopleBefore__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Managed People Before</label>
    <type>Text</type>
</CustomField>