force-app/main/default/objects/Lead/fields/ManagedPeopleBefore__c.field-meta.xml
<CustomField>
    <fullName>ManagedPeopleBefore__c</fullName>
    <inlineHelpText>Has the Lead managed people before? Select one from picklist</inlineHelpText>
    <label>Managed People Before</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>