force-app/main/default/objects/Lead/fields/Name_of_CEO__c.field-meta.xml
<CustomField>
    <fullName>Name_of_CEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a lookup field that is used to find the name of the CEO if that exists in the org.</inlineHelpText>
    <label>Name of Company&apos;s CEO [Lookup]</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>