force-app/main/default/objects/Lead/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <inlineHelpText>Nationality of the Lead Person, Type the name of the Country to  which he belongs.</inlineHelpText>
    <label>Nationality</label>
    <length>100</length>
    <type>Text</type>
</CustomField>