force-app/main/default/objects/Lead/fields/OtherUniqueDescription__c.field-meta.xml
<CustomField>
    <fullName>OtherUniqueDescription__c</fullName>
    <inlineHelpText>Any other details about this Lead that make them unique and different from others</inlineHelpText>
    <label>Other Unique Description</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>