force-app/main/default/objects/Lead/fields/Photo__c.field-meta.xml
<CustomField>
    <fullName>Photo__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>