force-app/main/default/objects/Lead/fields/PhotoBusinessCard__c.field-meta.xml
<CustomField>
    <fullName>PhotoBusinessCard__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Photo (Business card, etc)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>