force-app/main/default/objects/Lead/fields/PreviousCompanyName__c.field-meta.xml
<CustomField>
    <fullName>PreviousCompanyName__c</fullName>
    <inlineHelpText>Name of the Company where the Lead worked previous to their current role.</inlineHelpText>
    <label>Previous Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>