force-app/main/default/objects/Lead/fields/Primarylocationofinvestor__c.field-meta.xml
<CustomField>
    <fullName>Primarylocationofinvestor__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Primary location of investor</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>