force-app/main/default/objects/Lead/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <label>Relation</label>
    <type>TextArea</type>
</CustomField>