force-app/main/default/objects/Lead/fields/reportId__c.field-meta.xml
<CustomField>
    <fullName>reportId__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>reportId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>