force-app/main/default/objects/Lead/fields/RocketReachLink__c.field-meta.xml
<CustomField>
    <fullName>RocketReachLink__c</fullName>
    <inlineHelpText>Insert the URL of the Rocket Reach profile of this Lead.</inlineHelpText>
    <label>RocketReach Link</label>
    <type>Url</type>
</CustomField>