force-app/main/default/objects/Lead/fields/RoleAcc__c.field-meta.xml
<CustomField>
    <fullName>RoleAcc__c</fullName>
    <formula>Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Role</label>
    <type>Text</type>
</CustomField>