force-app/main/default/objects/Lead/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>School</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>