force-app/main/default/objects/Lead/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <inlineHelpText>“Only fill out if Shipping Address is different from Address”</inlineHelpText>
    <label>Shipping Address</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>