force-app/main/default/objects/Lead/fields/SkillSet__c.field-meta.xml
<CustomField>
    <fullName>SkillSet__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Skill Set</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>