force-app/main/default/objects/Lead/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this Box if the Lead was the Speak at an Convention where he was found</inlineHelpText>
    <label>Speaker</label>
    <type>Checkbox</type>
</CustomField>