force-app/main/default/objects/Lead/fields/SpecificInfo__c.field-meta.xml
<CustomField>
    <fullName>SpecificInfo__c</fullName>
    <inlineHelpText>Any other specific information about the Lead that needs to be mentioned.</inlineHelpText>
    <label>Specific Info</label>
    <type>TextArea</type>
</CustomField>