force-app/main/default/objects/Lead/fields/SubTypeAcc__c.field-meta.xml
<CustomField>
    <fullName>SubTypeAcc__c</fullName>
    <formula>TEXT( SubType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubType</label>
    <type>Text</type>
</CustomField>