force-app/main/default/objects/Lead/fields/Successful_Exits_Contact__c.field-meta.xml
<CustomField>
    <fullName>Successful_Exits_Contact__c</fullName>
    <formula>TEXT( SuccessfulExits__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Successful Exits</label>
    <type>Text</type>
</CustomField>