force-app/main/default/objects/Lead/fields/SuccessfulExits__c.field-meta.xml
<CustomField>
    <fullName>SuccessfulExits__c</fullName>
    <inlineHelpText>Has the Lead had a successful exit from their previous company? Select One from the picklist.</inlineHelpText>
    <label>Successful Exits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>