force-app/main/default/objects/Lead/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Select One from the Picklist for the Type of Lead.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investor</fullName>
                <default>true</default>
                <label>Investor</label>
            </value>
            <value>
                <fullName>Founder</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Investment Co</fullName>
            </value>
            <value>
                <fullName>Startup</fullName>
            </value>
            <value>
                <fullName>Web 3 Incubator</fullName>
            </value>
            <value>
                <fullName>Traditional Company</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>News Publication</fullName>
            </value>
            <value>
                <fullName>SP Subsidiary</fullName>
            </value>
            <value>
                <fullName>SP Fund Vehicle</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Blockchain Club</fullName>
            </value>
            <value>
                <fullName>Regulating Body</fullName>
            </value>
            <value>
                <fullName>Employee (Contact Persona)</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
                <isActive>false</isActive>
                <label>Employee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>