force-app/main/default/objects/Lead/fields/TypeAcc__c.field-meta.xml
<CustomField>
    <fullName>TypeAcc__c</fullName>
    <formula>TEXT( Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>