force-app/main/default/objects/Lead/fields/UniquePersonalInformation__c.field-meta.xml
<CustomField>
    <fullName>UniquePersonalInformation__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Unique Personal Information (DOB, Hobbie</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>