force-app/main/default/objects/Lead/fields/Web3InvestmentSectors__c.field-meta.xml
<CustomField>
    <fullName>Web3InvestmentSectors__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Web3 Investment Sectors</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>