force-app/main/default/objects/Lead/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <inlineHelpText>Fill in this field when the Lead source is selected as &apos;In-Person Meeting&apos;. Enter Date of In Person Meeting</inlineHelpText>
    <label>When</label>
    <type>Date</type>
</CustomField>