force-app/main/default/objects/Lead/fields/Where__c.field-meta.xml
<CustomField>
    <fullName>Where__c</fullName>
    <inlineHelpText>Fill in this field when the Lead source is selected as &apos;In-Person Meeting&apos;. Enter Place of In Person Meeting</inlineHelpText>
    <label>Where</label>
    <length>50</length>
    <type>Text</type>
</CustomField>