force-app/main/default/objects/Lead/fields/WhyDoTheyDeserveToBeFounder__c.field-meta.xml
<CustomField>
    <fullName>WhyDoTheyDeserveToBeFounder__c</fullName>
    <inlineHelpText>This is a Groopit Form field and should be automatically updated via the form.</inlineHelpText>
    <label>Why do they deserve to be a founder in S</label>
    <length>255</length>
    <type>Text</type>
</CustomField>