force-app/main/default/objects/Lead/fields/WXIntegration__Created_by_Wealth_X__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Created_by_Wealth_X__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to identify the Leads created by Wealth-X data.</description>
    <inlineHelpText>Tixk this box if the Lead was generated via WealthX</inlineHelpText>
    <label>Created by Wealth-X</label>
    <type>Checkbox</type>
</CustomField>