force-app/main/default/objects/Lead/fields/WXIntegration__UHNW__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__UHNW__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field will autopopulate based on Wealth-X Data integration.</inlineHelpText>
    <label>Wealth-X UHNW</label>
    <type>Checkbox</type>
</CustomField>